--- a/css/index.css
+++ b/css/index.css
@@ -140,3 +140,7 @@ button[disabled=disabled], button:disabled {
 .altura-invalida{
 	background-color: lightcoral;
 }
+
+#mensagem-erro {
+	color: red;
+}
